# kaggle_image-classify

./: .codecov.yml  .pep8speaks.yml  .pre-commit-config.yaml  Cassava_with_Lightning.ipynb  LICENSE  MANIFEST.in  Plant-Pathology-with-Lightning.ipynb  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  streamlit-app.py  train.py
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci_install-pkg.yml  ci_pkg-install.yml  ci_testing.yml  code-format.yml  codeql.yml
challenge_xyz/: __init__.py  utils.py
cldc/: data.py  models.py
kaggle_birdclef/: __init__.py  data.py
kaggle_cassava/: __init__.py  data.py  models.py
kaggle_imet/: __init__.py  data.py  models.py
kaggle_imetcollect/: __init__.py  data.py  models.py
kaggle_imgclassif/birdclef/: data.py
kaggle_imgclassif/cassava/: data.py  models.py
kaggle_imgclassif/imet_collect/: data.py  models.py
kaggle_imgclassif/plant_pathology/: __init__.py  augment.py  data.py  models.py
kaggle_plantpatho/: __init__.py  augment.py  augmenter.py  cli_train.py  data.py  models.py
kaggle_plantpathology/: augment.py  cli_train.py  data.py  models.py
notebooks/: Cassava-Leaf-with-Flash.ipynb  Cassava-Leaf-with-Lightning.ipynb  Cassava_with_Flash.ipynb  Cassava_with_Lightning.ipynb  Herbarium-with-Flash-EfficientNet.ipynb  Plant-Pathology-with-Flash.ipynb  Plant-Pathology-with-Lightning.ipynb  Plant-Pathology-with-Lightning_standalone.ipynb  iMet-with-Lightning-and-ViT.ipynb  iMet-with-Lightning.ipynb  imet-create-dataset-subset.py  subset-dataset.py
scripts/: birdclef_convert-spectrograms.py  herabrium_train-model.py  herbarium_train-model.py  imet_create-dataset-subset.py  plant-pathology_train-model.py
tests/: __init__.py  requirements.txt  test_augment.py  test_augmenter.py  test_data.py  test_imet_models.py  test_models.py  test_plantpatho_data.py  test_plantpatho_models.py
tests/_data/cassava/: train.csv
tests/cassava/: test_data.py  test_models.py
tests/data/: label_map.csv  train-from-kaggle.csv  train.csv
tests/data_imet-collect/: train-from-kaggle.csv
tests/data_plant-pathology/: train.csv
tests/imet_collect/: test_data.py  test_models.py
tests/imetcollect/: test_data.py  test_models.py
tests/plant_pathology/: test_augment.py  test_data.py  test_models.py
tests/plantpathology/: test_augment.py  test_data.py  test_models.py
