[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.black]
# https://github.com/psf/black
line-length = 120
exclude = "(.eggs|.git|.hg|.mypy_cache|.venv|_build|buck-out|build|dist)"

[tool.usort]
known_first_party = [
    "kaggle_imgclassif",
]
skip_glob = []
profile = "black"
line_length = 120
